# 3821-proj-chessengine

./: .gitignore  CMakeLists.txt  NOTICE  README.md
src/: endgame_tablebase.test.cpp  get_next_move.cpp  helper.cpp  helper.h  run_engine.cpp
